@@ -1,4 +1,4 @@
-DIST overlay-utils-0.2.tar.bz2 9997 RMD160 d40e51c85e8eab34d5bf4f542db9401d77c82e0d SHA1 d1b3637cc943b90935c63ef5467680a096176445 SHA256 16fdabba962975d90484299badd1afd38e4921e0af7627120d9393e577155e5f
-EBUILD overlay-utils-0.2-r2.ebuild 686 RMD160 37a8351831ffb3c267ce2bb546452bdae5cc8dd8 SHA1 74604fa97f1d70133b22a56b6b07900211102b01 SHA256 ecda38a96cfd2794d40a67dc8a41bf11c2127603cfa81a73e745711ee682d23b
-MISC ChangeLog 2435 RMD160 d139d282331fc8142ff6b04e5cec439727fd7806 SHA1 ab720bce76cf7447522914458650918cd3bac2fa SHA256 15e0ee3afaf6f6b34c0e5a31740c3eeeab3dedfc6016f1bcae704c68ab7b1a15
+DIST overlay-utils-0.2.1.tar.bz2 10009 RMD160 a6646dfd030122f7162815338c52d9b29cb3273b SHA1 49f3a222d2212c615ed2bbfd5c9834d4de04a1ea SHA256 3455e4bdb473af5d91f0f2beb647806b32126e2e34c066cbe80056d78f30f416
+EBUILD overlay-utils-0.2.1.ebuild 577 RMD160 8f0bea229f46b82002e6fd01b60d4eae22448069 SHA1 17b58132d90ad4708ce3f50efa1f6185c2c8b7e0 SHA256 d98fb6c07714378d29c05f06792eb77b231ee4dfc869b174cfd128539fb8dce6
+MISC ChangeLog 2626 RMD160 e01ca68e89106559b47d0c8d9dda3b8da647970b SHA1 3562cd4197143d8d06e08a6d0c477bac641d1737 SHA256 1c17fa1b94880772682d29ca5620a09edae23fc1ef1ac37cce9f4ca36667eb04
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
