@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Oct 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -overlay-utils-0.2-r2.ebuild, +overlay-utils-0.2.1.ebuild:
+  Version bump, fixes missed Manifest, if created with sunrise-commit
+
   17 Apr 2009; Christian Ruppert <idl0r@gentoo.org>
   overlay-utils-0.2-r2.ebuild:
   Added missing die statement.
